--- a/my_sensor_kit_launch/package.xml
+++ b/my_sensor_kit_launch/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>sample_sensor_kit_launch</name>
+  <name>my_sensor_kit_launch</name>
   <version>0.1.0</version>
   <description>The sample_sensor_kit_launch package</description>
   <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
