--- a/my_sensor_kit_description/config/sensor_kit_calibration.yaml
+++ b/my_sensor_kit_description/config/sensor_kit_calibration.yaml
@@ -6,6 +6,13 @@ sensor_kit_base_link:
   #   roll: -0.025
   #   pitch: 0.315
   #   yaw: 1.035
+  robosense_helios_link:
+    x: 0.0
+    y: 0.0
+    z: 0.0
+    roll: 0.0
+    pitch: 0.0
+    yaw: 0.0
   velodyne_top_base_link:
     x: 0.0
     y: 0.0
